...
        // pop up and down when any alerts are shown, which looks messy
        self.view.endEditing(true)
        
        // Seeing if the textboxes are valid before attempting
        // any login attempts
        if (textboxesValid() == false) {
            let textboxesValidAlertController = UIAlertController(title: "Incorrect Information", message: "Please check that you have entered all correct information, then try again", preferredStyle: UIAlertController.Style.alert)
            textboxesValidAlertController.addAction(UIAlertAction(title: "OK", style: UIAlertAction.Style.default, handler: nil))
            self.present(textboxesValidAlertController, animated: true, completion: nil)
            logger.error("Login textboxes missing some information")
        } else {
            // Checking if there is an available Internet connection,
            // and if so, attempt to log the user into the HAP+ server
            hudShow("Checking Internet connection")
...
                // or Single so that it can be used later. This is shown run if it
                // hasn't been set before (i.e. the very first setup of this device)
                if let deviceType = settings!.string(forKey: settingsDeviceType) {
                    // Device is set up, so nothing to do here
                    logger.info("This device is set up in \(deviceType) mode")
                } else {
                    let loginUserDeviceType = UIAlertController(title: "Please Select Device Type", message: "Personal - A device you have bought\nShared - School owned class set\nSingle - School owned 1:1 scheme", preferredStyle: UIAlertController.Style.alert)
                    loginUserDeviceType.addAction(UIAlertAction(title: "Personal", style: UIAlertAction.Style.default, handler: {(alertAction) -> Void in
                        self.setDeviceType("personal") }))
                    loginUserDeviceType.addAction(UIAlertAction(title: "Shared", style: UIAlertAction.Style.default, handler: {(alertAction) -> Void in
                        self.setDeviceType("shared") }))
                    loginUserDeviceType.addAction(UIAlertAction(title: "Single", style: UIAlertAction.Style.default, handler: {(alertAction) -> Void in
                        self.setDeviceType("single") }))
                    self.present(loginUserDeviceType, animated: true, completion: nil)
                }
                
                // Performing the segue to the master detail view
                self.successfulLogin = true
                self.performSegue(withIdentifier: "login.btnLoginSegue", sender: self)
            } else {
                // Inform the user they didn't have a valid username or password
                logger.error("The username or password was not valid")
                let loginUserFailController = UIAlertController(title: "Invalid Username or Password", message: "The username and password combination is not valid. Please check and try again", preferredStyle: UIAlertController.Style.alert)
                loginUserFailController.addAction(UIAlertAction(title: "OK", style: UIAlertAction.Style.default, handler: nil))
                self.present(loginUserFailController, animated: true, completion: nil)
                
                // Showing the login textboxes scroll area, as it may
                // have been hidden if the user has opened up the
                // app from the beginning, and not from app restoration
...
        toolBar.isTranslucent = true
        toolBar.sizeToFit()
        
        // buttons for toolBar
        let doneButton = UIBarButtonItem(title: "Select", style: .done, target: self, action: #selector(selectClick))
        let spaceButton = UIBarButtonItem(barButtonSystemItem: .flexibleSpace, target: nil, action: nil)
        let cancelButton = UIBarButtonItem(title: "Cancel", style: .plain, target: self, action: #selector(cancelClick))
        toolBar.setItems([cancelButton, spaceButton, doneButton], animated: false)
        toolBar.isUserInteractionEnabled = true
        textField.inputAccessoryView = toolBar
        
    }
    
...
