...
    // library, and a separate instance to ask for access
    // to the camera and microphone
    @objc let pscopePhotos = PermissionScope()
    @objc let pscopeCamera = PermissionScope()
    
    // Holding a reference to see if the popover is being
    // shown on the file browser "My Drives" view, so that
    // it can be used to disable access to most table cells
    @objc var showingOnEmptyFilePath = false
    
    // Holding a reference to see if the popover is being
    // shown in a directory where the user does or doesn't have
    // write permission, so that it can be used to disabled
...
        // Returning the number of rows in the current table section
        // - seealso: tableView
        logger.verbose("Number of rows in table section \(section): \(Int(self.tableSections[section][1])!)")
        return Int(tableSections[section][1])!
    }
    
    /// Adding user log in details to the 'Log Out' section footer,
    /// to help identify which user is currently logged in to the app
    ///
    /// As it's diffucult to know who is currently logged in to the app,
    /// a message is appended to the footer of the 'Log Out' section so
    /// that if someone picks up a logged in device, they can see if it
    /// is them or another user who is currently logged in. It is also
...
                    
                    // Displaying an alert view with textboxes for the
                    // user to type in the username of a user who is
                    // part of the "hap-ios-admins" group
                    // See: http://peterwitham.com/swift/intermediate/alert-with-user-entry/
                    var userLogOutAlert:UIAlertController?
                    userLogOutAlert = UIAlertController(title: "Log Out User", message: "Please enter an authenticated username to log out of this device", preferredStyle: .alert)
                    
                    userLogOutAlert!.addTextField(
                        configurationHandler: {(textField: UITextField!) in
                            textField.placeholder = "Username"
                            textField.keyboardType = .asciiCapable
                            textField.enablesReturnKeyAutomatically = true
...
